Closed Bug 1159302 Opened 9 years ago Closed 9 years ago

handle ftell errors in nsINIParser::InitFromFile

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: froydnj, Assigned: froydnj)

Details

Attachments

(1 file)

      No description provided.
Comment on attachment 8598725 [details] [diff] [review]
handle ftell errors in nsINIParser::InitFromFile

Review of attachment 8598725 [details] [diff] [review]:
-----------------------------------------------------------------

r=me
Attachment #8598725 - Flags: review?(erahm) → review+
Nathan, if this came from Coverity can you add the 'coverity' keyword and a CID in the whiteboard (eg, [CID 12345]) for proper tracking?
https://hg.mozilla.org/mozilla-central/rev/d09321cd16a6
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: