Bug 1159302 - handle ftell errors in nsINIParser::InitFromFile; r=erahm